--- a/widget.ui
+++ b/widget.ui
@@ -25,11 +25,31 @@
      </item>
      <item>
       <widget class="QLineEdit" name="led_server_ip">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="text">
         <string>127.0.0.1</string>
        </property>
        <property name="placeholderText">
         <string>Server IP</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btn_add_peer">
+       <property name="text">
+        <string>Add Peer</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="Line" name="line_5">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
        </property>
       </widget>
      </item>
@@ -44,9 +64,16 @@
       <widget class="QComboBox" name="cmb_peers"/>
      </item>
      <item>
-      <widget class="QPushButton" name="btn_add_peer">
+      <widget class="QLabel" name="label_4">
        <property name="text">
-        <string>Add Peer</string>
+        <string>Last alive:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="lbl_last_alive">
+       <property name="text">
+        <string>0</string>
        </property>
       </widget>
      </item>
@@ -63,40 +90,12 @@
        </property>
       </spacer>
      </item>
-     <item>
-      <widget class="QPushButton" name="btn_send_hello">
-       <property name="text">
-        <string>Send Hello (Register)</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="btn_get_peers">
-       <property name="text">
-        <string>Get Peers</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="btn_send_status">
-       <property name="text">
-        <string>Send Status to server</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="btn_send_bye">
-       <property name="text">
-        <string>Send Goodbye (unregister)</string>
-       </property>
-      </widget>
-     </item>
     </layout>
    </item>
-   <item row="1" column="0">
+   <item row="3" column="0">
     <widget class="QPlainTextEdit" name="pte_logs"/>
    </item>
-   <item row="1" column="1">
+   <item row="3" column="1">
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <widget class="QLabel" name="label_3">
@@ -137,6 +136,99 @@
       <widget class="QListWidget" name="lstw_connected_nodes"/>
      </item>
     </layout>
+   </item>
+   <item row="2" column="0" colspan="2">
+    <layout class="QHBoxLayout" name="horizontalLayout_3">
+     <item>
+      <widget class="QPushButton" name="btn_send_hello">
+       <property name="text">
+        <string>Send Hello</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="Line" name="line_3">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Last alive:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QDateTimeEdit" name="dte_last_alive"/>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btn_send_status">
+       <property name="text">
+        <string>Send Status to server</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="Line" name="line">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btn_send_bye">
+       <property name="text">
+        <string>Send Bye</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btn_get_peers">
+       <property name="text">
+        <string>Get elited peers</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="Line" name="line_2">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btn_get_alive_peers">
+       <property name="text">
+        <string>Get peers with last alive:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QDateTimeEdit" name="dte_alive_since"/>
+     </item>
+    </layout>
+   </item>
+   <item row="1" column="0" colspan="2">
+    <widget class="Line" name="line_4">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
